--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
 	</head>
 	<body>
 		<script src="js/game.js"></script>
-		<script src="js/collision/game.js"></script>
+		<script src="js/ball.js"></script>
+		<script src="js/player.js"></script>
+		<script src="js/spawner.js"></script>
 	</body>
 </html>
