--- a/index.html
+++ b/index.html
@@ -14,10 +14,9 @@
 				Your relationship with our balls lasted for <input type="text" id="score" disabled value="3.1415692"> <br>seconds.<br><br>
 				<input type="text" placeholder="Enter your name" id="namefield"><br><br><br><br>
 				<a id="playagainbtn">Play again!</a><br><br><br><br><br>
-				<a id="save">Highscores</a><br><br><br>
+				<a id="save" href="http://waveos.pf-control.de/scores/scoreboard.php">Highscores</a><br><br><br>
 			</div>
 		</div>
-
 		<script src="js/JetBar.js"></script>
 		<script src="js/Laser.js"></script>
 		<script src="js/Pad.js"></script>
