--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
 		<script src="js/Fighter.js"></script>
 		<script src="js/Shot.js"></script>
 		<script src="js/AoEBlast.js"></script>
+		<script src="js/ItemBox.js"></script>
 		<script src="js/Main.js"></script>
 	</body>
 </html>
