--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 		<link href='http://fonts.googleapis.com/css?family=Merriweather:400,900,700' rel='stylesheet' type='text/css'>
 	</head>
 	<body style="margin:0px;">
-		
+			
 		<div id="overlay">
 			<div id="gameover">
 				<h1>Game over!</h1>
@@ -17,6 +17,8 @@
 				<a id="save" href="http://waveos.pf-control.de/scores/scoreboard.php">Highscores</a><br><br><br>
 			</div>
 		</div>
+		<script src="js/CollisionManager.js"></script>
+		<script src="js/ItemBox.js"></script>
 		<script src="js/JetBar.js"></script>
 		<script src="js/Laser.js"></script>
 		<script src="js/Pad.js"></script>
@@ -25,11 +27,6 @@
 		<script src="js/Fighter.js"></script>
 		<script src="js/Shot.js"></script>
 		<script src="js/AoEBlast.js"></script>
-		<script src="js/Items.js"></script>
-		<script src="js/ItemBox.js"></script>
-		<script src="js/ItemConfig.js"></script>
 		<script src="js/Main.js"></script>
-		<!--This is a comment. Comments are not displayed in the browser-->
-		<!-- This is another comment from MX -->
 	</body>
 </html>
