--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
 			</div>
 		</div>
 		<script src="js/CollisionManager.js"></script>
+		<script src="js/ItemConfig.js"></script>
 		<script src="js/ItemBox.js"></script>
 		<script src="js/JetBar.js"></script>
 		<script src="js/Laser.js"></script>
